@@ -29,6 +29,3 @@
     != link_to 'TigerXML.xsd', '/exports/TigerXML.xsd'
     != link_to 'TigerXMLHeader.xsd', '/exports/TigerXMLHeader.xsd'
     != link_to 'TigerXMLSubcorpus.xsd', '/exports/TigerXMLSubcorpus.xsd'
-  %li
-    CoNLL format:
-    != link_to 'Description of format', 'http://ilk.uvt.nl/conll/#dataformat'
