@@ -25,7 +25,6 @@ autoload :SourceExporter, 'exporter/source_exporter'
 autoload :XMLSourceExporter, 'exporter/xml_source_exporter'
 autoload :PROIELXMLExporter, 'exporter/proiel_xml_exporter'
 autoload :TextExporter, 'exporter/text_exporter'
-autoload :CoNLLExporter, 'exporter/conll_exporter'
 autoload :TigerXMLExporter, 'exporter/tiger_xml_exporter'
 autoload :Tiger2Exporter, 'exporter/tiger2_exporter'
 autoload :JSONExporter, 'exporter/json_exporter'
