@@ -1,4 +1,3 @@
-*.conll.gz
 *.xml.gz
 *.tiger.gz
 *.tiger2.gz
